InetAddress.getLocalHost crash if IPv6 disabled (macosx)

XMLWordPrintable

    • b113
    • os_x
    • Verified

        java/nio/channels/DatagramChannel/Disconnect.java
        met vm crash on Mac OS X in TL nightly testing


        ACTION: main -- Failed. Unexpected exit from test [exit code: 134]
        REASON: User specified action: run main/othervm -Djava.net.preferIPv4Stack=true Disconnect
        TIME: 100.971 seconds
        messages:
        command: main -Djava.net.preferIPv4Stack=true Disconnect
        reason: User specified action: run main/othervm -Djava.net.preferIPv4Stack=true Disconnect
        elapsed time (seconds): 100.971
        STDOUT:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x000000010d869cb8, pid=15504, tid=35331
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0) (build 1.8.0-ea-langtools-nightly-h421-20131008-b110-b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b51 mixed mode bsd-amd64 compressed oops)
        # Problematic frame:
        # j java.net.Inet4AddressImpl.lookupAllHostAddr(Ljava/lang/String;)[Ljava/net/InetAddress;+0
        #
        # Core dump written. Default location: /cores/core or core.15504
        #
        # An error report file with more information is saved as:
        # /Users/aurora/temp/scratch/hs_err_pid15504.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #
        STDERR:
        Phoning home...
        Using server: 10.161.186.18, port 4711

        TEST RESULT: Failed. Unexpected exit from test [exit code: 134]

              Assignee:
              Robert Mckenna
              Reporter:
              Amy Lu (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: