8026245: InetAddress.getLocalHost crash if IPv6 disabled (macosx)

Reviewed-by: chegar, alanb